179390297 - Fix buttons 🐞 (now clickable)
## DONE:
- Fix unclickable buttons, caused by an overflowing draw-tool div and incorrectly specified overflow attribute.

[#179390297]
https://www.pivotaltracker.com/story/show/179390297

--- a/src/labbook/components/runtime.scss
+++ b/src/labbook/components/runtime.scss
@@ -59,7 +59,7 @@
   }
   .draw-tool-wrapper {
     height: 500px;
-    overflow: none;
+    overflow: hidden;
   }
 }
 
